--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -5,8 +5,16 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 20px;
-  background-color: grey;
+  padding: 0;
+  background-color:  rgba(48, 27, 141, 0.39) ;
+  display: flex;
+  flex-direction:row;
+}
+
+.conteiner-contente{
+  width: 100%;
+  height: auto;
+  margin: 20px;
 }
 
 table {
@@ -46,7 +54,9 @@ th {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 25%; /* Could be more or less, depending on screen size */
+  border-radius: 10px;
+  box-shadow: 8px 5px;
 }
 
 /* The Close Button */
@@ -62,4 +72,37 @@ th {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+input {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 5px;
+}
+
+.btn-success {
+  background-color: green;
+  color: #f2f2f2;
+}
+
+.btn-warning {
+  background-color: rgb(204, 134, 3);
+  color: #f2f2f2;
+}
+
+.btn-danger {
+  background-color: rgb(173, 0, 0);
+  color: #f2f2f2;
+}
+
+.btn-sm {
+  cursor:pointer;
+  width: 100%;
+  border: none;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 5px;
+  font-size: 14px;
+  width: 60px;
 }
