--- a/src/pages/styles.css
+++ b/src/pages/styles.css
@@ -6,18 +6,18 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color:  rgba(48, 27, 141, 0.39) ;
+  background-color: rgba(48, 27, 141, 0.39);
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
 }
 
-.conteiner-content{
+.conteiner-content {
   width: 100%;
   margin: 20px;
 
 }
 
-#content{
+#content {
   height: calc(100vh - 200px);
   overflow-y: auto;
   margin: 20px;
@@ -39,42 +39,49 @@ th {
   background-color: #f2f2f2;
 }
 
-#modal-criar-cliente{
+#modal-criar-cliente {
   display: none;
 
 }
 
-#modal-editar-cliente{
+#modal-editar-cliente {
   display: none;
 
 }
-/* modal form de edicao de cliente */
-/* The Modal (background) */
+
 .modal {
-  
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Content/Box */
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  margin: 15% auto;
+  padding: 40px;
   border: 1px solid #888;
-  width: 25%; /* Could be more or less, depending on screen size */
+  width: 300px;
   border-radius: 10px;
   box-shadow: 8px 5px;
 }
 
-/* The Close Button */
+.form-label {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form-label input {
+  width: 200px;
+}
+
 .close {
   color: #aaa;
   float: right;
@@ -96,8 +103,8 @@ input {
   padding: 5px;
 }
 
-button{
-  cursor:pointer;
+button {
+  cursor: pointer;
   width: 100%;
   border: none;
   border-radius: 5px;
@@ -126,5 +133,5 @@ button{
 }
 
 .btn-md {
-  width: 150px;
+  width: 200px;
 }
