refactor: ajustando a estrutura de pastas do projeto

--- a/src/views/colaboradores/index.html
+++ b/src/views/colaboradores/index.html
@@ -54,7 +54,7 @@
 
     <script src="../../components/navLoader.js"></script>
     <script src="../../../renderer.js"></script>
-    <script type="module" src="./colaboradores.js"></script>
+    <script type="module" src="../../service/colaboradores.js"></script>
 </body>
 
 </html>
