--- a/src/views/clientes/index.html
+++ b/src/views/clientes/index.html
@@ -54,7 +54,7 @@
 
     <script src="../../components/navLoader.js"></script>
     <script src="../../../renderer.js"></script>
-    <script type="module" src="./clientes.js"></script>
+    <script type="module" src="../../service/clientes.js"></script>
 </body>
 
 </html>
