--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../../components/navLoader.css">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="home.css">
-    <title>Lista de Serviços</title>
+    <title>Lista de Lançamentos</title>
 
 </head>
 
@@ -19,16 +19,26 @@
             <h2 id="title-modal">Criar Servico</h2>
             <input type="text" id="id-servico" hidden>
             <div class="form-label">
-                <label for="nome-servico">Nome:</label>
-                <input type="text" id="nome-servico" name="nome-servico" required>
+                <label for="data">Data/Hora:</label>
+                <input type="datetime-local" id="data" name="data" required>
             </div>
             <div class="form-label">
-                <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" type="text">
+                <label for="select-clientes">Cliente:</label>
+                <select id="select-clientes">
+                    <!-- Options will be dynamically inserted here -->
+                </select>
             </div>
             <div class="form-label">
-                <label for="taxa">Taxa:</label>
-                <input type="text" id="taxa" name="taxa" type="text" maxlength="14" required>
+                <label for="select-colaboradores">Colaborador:</label>
+                <select id="select-colaboradores">
+                    <!-- Options will be dynamically inserted here -->
+                </select>
+            </div>
+            <div class="form-label">
+                <label for="select-servicos">Serviço:</label>
+                <select id="select-servicos">
+                    <!-- Options will be dynamically inserted here -->
+                </select>
             </div>
             <div class="form-label">
                 <button id="btn-salvar-servico" class="btn-success btn-lg" type="button">Salvar</button>
