feat: alterando  classe css

--- a/src/views/clientes/index.html
+++ b/src/views/clientes/index.html
@@ -17,18 +17,18 @@
         <div class="modal-content">
             <span id="close-modal-cria-cliente" class="close">&times;</span>
             <h2 id="title-modal">Criar Cliente</h2>
-            <input type="text" id="id-cliente" hidden>
+            <input class="input-style" type="text" id="id-cliente" hidden>
             <div class="form-label">
                 <label for="nome-cliente">Nome:</label>
-                <input type="text" id="nome-cliente" name="nome-cliente" required>
+                <input class="input-style" type="text" id="nome-cliente" name="nome-cliente" required>
             </div>
             <div class="form-label">
                 <label for="telefone-cliente">Telefone:</label>
-                <input type="text" id="telefone-cliente" name="telefone-cliente" type="tel" maxlength="15" required>
+                <input class="input-style" type="text" id="telefone-cliente" name="telefone-cliente" type="tel" maxlength="15" required>
             </div>
             <div class="form-label">
                 <label for="cpf-cliente">Cpf:</label>
-                <input type="text" id="cpf-cliente" name="cpf-cliente" type="text" maxlength="14" required>
+                <input class="input-style" type="text" id="cpf-cliente" name="cpf-cliente" type="text" maxlength="14" required>
             </div>
             <div class="form-label">
                 <button id="btn-salvar-cliente" class="btn-success btn-lg" type="button">Salvar</button>
@@ -44,7 +44,7 @@
         <!-- ### Add Cliente ### -->
         <button id="open-modal-cria-cliente" class="btn-success btn-md">Criar novo Cliente</button>
 
-        <input type="text" id="searchInput" placeholder="Pesquisar Cliente...">
+        <input class="input-style" type="text" id="searchInput" placeholder="Pesquisar Cliente...">
         <hr>
 
         <div id="content">
