--- a/src/views/colaboradores/index.html
+++ b/src/views/colaboradores/index.html
@@ -20,15 +20,15 @@
             <input type="text" id="id-colaborador" hidden>
             <div class="form-label">
                 <label for="nome-colaborador">Nome:</label>
-                <input type="text" id="nome-colaborador" name="nome-colaborador" required>
+                <input class="input-style" type="text" id="nome-colaborador" name="nome-colaborador" required>
             </div>
             <div class="form-label">
                 <label for="profissao">Profissão:</label>
-                <input type="text" id="profissao" name="profissao" type="text">
+                <input class="input-style" type="text" id="profissao" name="profissao" type="text">
             </div>
             <div class="form-label">
                 <label for="cpf-colaborador">Cpf:</label>
-                <input type="text" id="cpf-colaborador" name="cpf-colaborador" type="text" maxlength="14" required>
+                <input class="input-style" type="text" id="cpf-colaborador" name="cpf-colaborador" type="text" maxlength="14" required>
             </div>
             <div class="form-label">
                 <button id="btn-salvar-colaborador" class="btn-success btn-lg" type="button">Salvar</button>
@@ -44,7 +44,7 @@
         <!-- ### Add Colaborador ### -->
         <button id="open-modal-cria-colaborador" class="btn-success btn-md">Criar novo Colaborador</button>
 
-        <input type="text" id="searchInput" placeholder="Pesquisar Colaborador...">
+        <input class="input-style" type="text" id="searchInput" placeholder="Pesquisar Colaborador...">
         <hr>
 
         <div id="content">
