--- a/src/views/servicos/index.html
+++ b/src/views/servicos/index.html
@@ -20,15 +20,15 @@
             <input type="text" id="id-servico" hidden>
             <div class="form-label">
                 <label for="nome-servico">Nome:</label>
-                <input type="text" id="nome-servico" name="nome-servico" required>
+                <input class="input-style" type="text" id="nome-servico" name="nome-servico" required>
             </div>
             <div class="form-label">
                 <label for="preco">Preço:</label>
-                <input type="text" id="preco" name="preco" type="text">
+                <input class="input-style" type="text" id="preco" name="preco" type="text">
             </div>
             <div class="form-label">
                 <label for="taxa">Taxa:</label>
-                <input type="text" id="taxa" name="taxa" type="text" maxlength="14" required>
+                <input class="input-style" type="text" id="taxa" name="taxa" type="text" maxlength="14" required>
             </div>
             <div class="form-label">
                 <button id="btn-salvar-servico" class="btn-success btn-lg" type="button">Salvar</button>
@@ -44,7 +44,7 @@
         <!-- ### Add Serviço ### -->
         <button id="open-modal-cria-servico" class="btn-success btn-md">Criar novo Serviço</button>
 
-        <input type="text" id="searchInput" placeholder="Pesquisar Serviço...">
+        <input class="input-style" type="text" id="searchInput" placeholder="Pesquisar Serviço...">
         <hr>
 
         <div id="content">
