--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -8,19 +8,30 @@
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="home.css">
     <title>Lista de Lançamentos</title>
-
 </head>
 
 <body>
-    <!-- Modal de Adição e Edição-->
-    <div id="modal-cria-servico" class="modal">
+    <!-- alerta -->
+    <div id="custom-alert" class="modal">
         <div class="modal-content">
-            <span id="close-modal-cria-servico" class="close">&times;</span>
+            <span class="close-btn">&times;</span>
+            <p>Tem certeza que deseja excluir? Esta ação é irreversível</p>
+            <div class="button-container">
+                <button id="confirm-delete">Sim, deletar</button>
+                <button id="cancel-delete">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal de Adição e Edição-->
+    <div id="modal-cria-venda" class="modal">
+        <div class="modal-content">
+            <span id="close-modal-cria-venda" class="close">&times;</span>
             <h2 id="title-modal">Criar Servico</h2>
             <input type="text" id="id-servico" hidden>
             <div class="form-label">
                 <label for="data">Data/Hora:</label>
-                <input type="datetime-local" id="data" name="data" required>
+                <input class="data-input" type="datetime-local" id="data" name="data" required>
             </div>
             <div class="form-label">
                 <label for="select-clientes">Cliente:</label>
@@ -34,16 +45,16 @@
                     <!-- Options will be dynamically inserted here -->
                 </select>
             </div>
-            <div class="form-label">
-                <label for="select-servicos">Serviço:</label>
-                <select id="select-servicos">
-                    <!-- Options will be dynamically inserted here -->
-                </select>
-            </div>
-            <div class="form-label">
-                <button id="btn-salvar-servico" class="btn-success btn-lg" type="button">Salvar</button>
-            </div>
 
+            <!-- CHECKBOX SERVICOS -->
+            <div class="show-selected-services"></div>
+            <div class="dropdown">
+                <div class="select-services">Selecione os Serviços</div>
+                <div class="dropdown-content" id="checkbox-container"></div>
+            </div>
+            <div class="form-label">
+                <button id="btn-salvar-venda" class="btn-success btn-lg" type="button">Salvar</button>
+            </div>
         </div>
     </div>
 
@@ -52,9 +63,8 @@
         <h2>Home</h2>
 
         <!-- ### Add Serviço ### -->
-        <button id="open-modal-cria-servico" class="btn-success btn-md">Criar novo Serviço</button>
-
-        <input type="text" id="searchInput" placeholder="Pesquisar Serviço...">
+        <button id="open-modal-cria-venda" class="btn-success btn-md">Criar novo Serviço</button>
+        <input class="input-style" type="text" id="searchInput" placeholder="Pesquisar Serviço...">
         <hr>
 
         <div id="content">
