--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -40,6 +40,7 @@ th {
 }
 
 .modal {
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
@@ -47,19 +48,50 @@ th {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgb(0, 0, 0);
   background-color: rgba(0, 0, 0, 0.4);
 }
 
-/* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #fff;
   margin: 15% auto;
-  padding: 10px 40px;
+  padding: 20px;
   border: 1px solid #888;
-  width: 350px;
   border-radius: 10px;
+  width: 370px;
   box-shadow: 8px 5px 20px;
+  animation: fadeIn 0.3s;
+}
+
+.close-btn {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close-btn:hover,
+.close-btn:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Fade-in animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+/* Confirmation and cancel buttons */
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
 }
 
 .form-label {
