--- a/src/views/styles.css
+++ b/src/views/styles.css
@@ -13,30 +13,33 @@ body {
 
 .conteiner-content {
   width: 100%;
-  margin: 20px;
-
+  margin: 0 20px;
+  height: 100vh;
 }
 
 #content {
   height: calc(100vh - 200px);
   overflow-y: auto;
-  margin: 20px;
+  margin: 0 40px;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
+  border-spacing: 0;
 }
 
 th,
 td {
-  border: 1px solid #dddddd;
+  border: 1px solid #000000;
   text-align: left;
-  padding: 8px;
+  padding: 5px;
+  background-color: #f2f2f2;
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #37029988;
+  color: #fff;
 }
 
 .modal {
@@ -145,6 +148,12 @@ button {
 .btn-danger {
   background-color: rgb(173, 0, 0);
   color: #f2f2f2;
+}
+
+.btn-xsm {
+  margin: 10px;
+  height: 25px;
+  width: 25px;
 }
 
 .btn-sm {
