--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -31,7 +31,7 @@
             <input type="text" id="id-servico" hidden>
             <div class="form-label">
                 <label for="data">Data/Hora:</label>
-                <input class="data-input" type="datetime-local" id="data" name="data" required>
+                <input class="data-input" type="datetime-local" id="data" required>
             </div>
             <div class="form-label">
                 <label for="select-clientes">Cliente:</label>
@@ -60,11 +60,16 @@
 
     <div class="header"></div>
     <div class="conteiner-content">
-        <h2>Home</h2>
+        <h2>Lançamentos</h2>
 
         <!-- ### Add Serviço ### -->
-        <button id="open-modal-cria-venda" class="btn-success btn-md">Criar novo Serviço</button>
-        <input class="input-style" type="text" id="searchInput" placeholder="Pesquisar Serviço...">
+        <div class="header-top">
+            <div style=" min-width: 200px; max-width: 500px;">
+                <button class="btn-success btn-md" style="max-width: 150px;"  id="open-modal-cria-venda">Criar novo Serviço</button>
+                <input class="input-style" type="text" style="max-width: 150px;"  id="searchInput" placeholder="Pesquisar Cliente...">
+            </div>
+            <div style="border: 1px solid blue; max-width: 500px; background-color: aliceblue ; padding:0 15px;" id="total"></div>
+        </div>
         <hr>
 
         <div id="content">
