refactor: incluindo o componente de alerta

--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -17,8 +17,8 @@
             <span class="close-btn">&times;</span>
             <p>Tem certeza que deseja excluir? Esta ação é irreversível</p>
             <div class="button-container">
-                <button id="confirm-delete">Sim, deletar</button>
-                <button id="cancel-delete">Cancelar</button>
+                <button class="btn-success" id="confirm-delete">Sim, deletar</button>
+                <button class="btn-danger" id="cancel-delete">Cancelar</button>
             </div>
         </div>
     </div>
