--- a/src/views/servicos/index.html
+++ b/src/views/servicos/index.html
@@ -12,6 +12,18 @@
 </head>
 
 <body>
+    <!-- alerta -->
+    <div id="custom-alert" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <p>Tem certeza que deseja excluir? Esta ação é irreversível</p>
+            <div class="button-container">
+                <button class="btn-success" id="confirm-delete">Sim, deletar</button>
+                <button class="btn-danger" id="cancel-delete">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Modal de Adição e Edição-->
     <div id="modal-cria-servico" class="modal">
         <div class="modal-content">
