refactor: melhorando a query das vendas

--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -84,7 +84,7 @@
 
                 <button style="width: 52px;" class="btn-md btn-warning" id="btn-filtrar">Filtrar</button>
                 <button style="width: 52px;" class="btn-md btn-danger" id="btn-limpar-filtro">Limpar</button>
-                <button style="width: 52px;" class="btn-md btn-success" id="btn-gerar-pdf">Export</button>
+                <button style="width: 52px;" class="btn-md btn-success" hidden id="btn-gerar-pdf">Export</button>
             </div>
         </div>
 
